--- a/scopes/compilation/multi-compiler/multi-compiler.docs.mdx
+++ b/scopes/compilation/multi-compiler/multi-compiler.docs.mdx
@@ -3,6 +3,6 @@ description: The multi-compiler aspect allows the configuration of multiple comp
 labels: ['multi-compiler', 'compiler', 'envs', 'compiler', 'bit', 'extension', 'aspect']
 ---
 
-import { MultiCompiler } from '@teambit/aspect-docs.multi-compiler';
+import { MultiCompiler } from '@teambit/compilation.aspect-docs.multi-compiler';
 
 <MultiCompiler />
