--- a/scopes/dependencies/dependency-resolver/dependency-resolver.docs.mdx
+++ b/scopes/dependencies/dependency-resolver/dependency-resolver.docs.mdx
@@ -3,6 +3,6 @@ description: Simplifies the dependency management of components in a Bit workspa
 labels: ['core aspect', 'dependencies']
 ---
 
-import { DependencyResolver } from '@teambit/aspect-docs.dependency-resolver';
+import { DependencyResolver } from '@teambit/dependencies.aspect-docs.dependency-resolver';
 
 <DependencyResolver />
