--- a/scopes/dependencies/pnpm/pnpm.docs.mdx
+++ b/scopes/dependencies/pnpm/pnpm.docs.mdx
@@ -3,6 +3,6 @@ description: Enables the use of pnpm in a Bit workspace
 labels: ['pnpm', 'package manager']
 ---
 
-import { Pnpm } from '@teambit/aspect-docs.pnpm';
+import { Pnpm } from '@teambit/dependencies.aspect-docs.pnpm';
 
 <Pnpm />
