--- a/scopes/dependencies/yarn/yarn.docs.mdx
+++ b/scopes/dependencies/yarn/yarn.docs.mdx
@@ -3,6 +3,6 @@ description: Enables the use of Yarn 2 in a Bit workspace
 labels: ['yarn', 'package manager']
 ---
 
-import { Yarn } from '@teambit/aspect-docs.yarn';
+import { Yarn } from '@teambit/dependencies.aspect-docs.yarn';
 
 <Yarn />
