--- a/scopes/generator/generator/generator.docs.mdx
+++ b/scopes/generator/generator/generator.docs.mdx
@@ -3,6 +3,6 @@ description: Generator for generating component templates
 labels: ['genearor', 'templates']
 ---
 
-import { Generator } from '@teambit/aspect-docs.generator';
+import { Generator } from '@teambit/generator.aspect-docs.generator';
 
 <Generator />
