--- a/scopes/harmony/logger/logger.docs.mdx
+++ b/scopes/harmony/logger/logger.docs.mdx
@@ -3,6 +3,6 @@ description: Modern logging for component-driven applications.
 labels: ['logger', 'component-based', 'bit']
 ---
 
-import { Logger } from '@teambit/aspect-docs.logger';
+import { Logger } from '@teambit/harmony.aspect-docs.logger';
 
 <Logger />
