--- a/scopes/harmony/node/node.docs.mdx
+++ b/scopes/harmony/node/node.docs.mdx
@@ -3,6 +3,6 @@ description: A Bit development environment for Node Components
 labels: ['node', 'environment', 'env', 'aspect', 'extension']
 ---
 
-import { Node } from '@teambit/aspect-docs.node';
+import { Node } from '@teambit/harmony.aspect-docs.node';
 
 <Node />
