--- a/scopes/mdx/mdx/mdx.docs.mdx
+++ b/scopes/mdx/mdx/mdx.docs.mdx
@@ -3,6 +3,6 @@ description: A Bit-MDX integration for simple & powerful component documentation
 labels: ['mdx', 'bit', 'docs', 'md', 'markdown', 'ui']
 ---
 
-import { Mdx } from '@teambit/aspect-docs.mdx';
+import { Mdx } from '@teambit/mdx.aspect-docs.mdx';
 
 <Mdx />
