--- a/scopes/pkg/pkg/pkg.docs.mdx
+++ b/scopes/pkg/pkg/pkg.docs.mdx
@@ -4,6 +4,6 @@ description: Generates, packs and publishes component packages
 labels: ['packages', 'aspect', 'pkg']
 ---
 
-import { Pkg } from '@teambit/aspect-docs.pkg';
+import { Pkg } from '@teambit/pkg.aspect-docs.pkg';
 
 <Pkg />
