--- a/scopes/preview/preview/preview.docs.mdx
+++ b/scopes/preview/preview/preview.docs.mdx
@@ -3,6 +3,6 @@ description: Handles the bundlings and rendering of component compositions and d
 labels: ['core aspect']
 ---
 
-import { Preview } from '@teambit/aspect-docs.preview';
+import { Preview } from '@teambit/preview.aspect-docs.preview';
 
 <Preview />
