--- a/scopes/typescript/typescript/typescript.docs.mdx
+++ b/scopes/typescript/typescript/typescript.docs.mdx
@@ -3,6 +3,6 @@ description: Typescript compilation for Bit components.
 labels: ['typescript', 'compiler', 'bit', 'extension', 'aspect']
 ---
 
-import { Typescript } from '@teambit/aspect-docs.typescript';
+import { Typescript } from '@teambit/typescript.aspect-docs.typescript';
 
 <Typescript />
