--- a/scopes/compilation/babel/babel.docs.mdx
+++ b/scopes/compilation/babel/babel.docs.mdx
@@ -3,6 +3,6 @@ description: Babel compilation for Bit components
 labels: ['babel', 'compiler', 'bit', 'extension', 'aspect']
 ---
 
-import { Babel } from '@teambit/aspect-docs.babel';
+import { Babel } from '@teambit/compilation.aspect-docs.babel';
 
 <Babel />
