--- a/scopes/compilation/compiler/compiler.docs.mdx
+++ b/scopes/compilation/compiler/compiler.docs.mdx
@@ -3,6 +3,6 @@ description: Compiler compilation for Bit components
 labels: ['compiler', 'bit', 'extension', 'aspect']
 ---
 
-import { Compiler } from '@teambit/aspect-docs.compiler';
+import { Compiler } from '@teambit/compilation.aspect-docs.compiler';
 
 <Compiler />
