--- a/scopes/component/component/component.docs.mdx
+++ b/scopes/component/component/component.docs.mdx
@@ -3,6 +3,6 @@ description: Component aspect for Bit components
 labels: ['component', 'bit', 'extension', 'aspect']
 ---
 
-import { Component } from '@teambit/aspect-docs.component';
+import { Component } from '@teambit/component.aspect-docs.component';
 
 <Component />
