--- a/scopes/compositions/compositions/compositions.docs.mdx
+++ b/scopes/compositions/compositions/compositions.docs.mdx
@@ -3,6 +3,6 @@ description: Renders component instances as part of different compositions.
 labels: ['ui', 'tests']
 ---
 
-import { Compositions } from '@teambit/aspect-docs.compositions';
+import { Compositions } from '@teambit/compositions.aspect-docs.compositions';
 
 <Compositions />
