--- a/scopes/envs/envs/envs.docs.mdx
+++ b/scopes/envs/envs/envs.docs.mdx
@@ -3,6 +3,6 @@ description: Manages Environments and Environment Services
 labels: ['environments', 'core aspect']
 ---
 
-import { Envs } from '@teambit/aspect-docs.envs';
+import { Envs } from '@teambit/envs.aspect-docs.envs';
 
 <Envs />
