--- a/scopes/pipelines/builder/builder.docs.mdx
+++ b/scopes/pipelines/builder/builder.docs.mdx
@@ -3,6 +3,6 @@ description: build components on isolated directories
 labels: ['docs', 'aspect', 'extensions']
 ---
 
-import { Builder } from '@teambit/aspect-docs.builder';
+import { Builder } from '@teambit/pipelines.aspect-docs.builder';
 
 <Builder />
