--- a/scopes/workspace/variants/variants.docs.mdx
+++ b/scopes/workspace/variants/variants.docs.mdx
@@ -3,6 +3,6 @@ description: teambit.workspace/variants enables cascading configurations by sele
 labels: ['variants', 'workspace', 'bit', 'extension', 'aspect']
 ---
 
-import { Variants } from '@teambit/aspect-docs.variants';
+import { Variants } from '@teambit/workspace.aspect-docs.variants';
 
 <Variants />
