--- a/scopes/react/aspect-docs/react-native/react-native.mdx
+++ b/scopes/react/aspect-docs/react-native/react-native.mdx
@@ -804,3 +804,141 @@ export class ReactNativeEnv implements Environment {
   }
 }
 ```
+
+## FAQ
+
+### Compositions issues
+
+```
+You may need an appropriate loader to handle this file type...
+```
+
+This error can show up for multiple reason, and one of the most popular it's because we use a library in a React Native component that use Native API's.  
+And the local Bit Dev Server run on Web, so it can't work properly with API's that suppose to be on a mobile device.  
+So components that are using a library that use Native API's cannot be rendered on the web, because the Native API's are unavailable.
+
+One way to solve it is to see if the library have a support for Web and update your code to be also Web compatible.  
+If not, the second way to solve this is to search for a parallel library with Web support and make a Webpack aliases in a Bit React Native extension inside your project, and then configure the extension to make a Webpack alises.
+
+If for some reason a library don't have it's parallel library for the web and don't have a built in Websupport, you can't make the composition working on the local Bit dev server.
+
+For example, [`react-native-svg`](https://github.com/react-native-svg/react-native-svg) library have a parallel library called [`react-native-svg-web`](https://github.com/bakerface/react-native-svg-web).  
+Let's create a React Native extension and add a `webpack-transformers.ts` file in the extension under `webpack` folder, the file look like this:
+
+```ts
+import { WebpackConfigTransformer, WebpackConfigMutator, WebpackConfigTransformContext } from '@teambit/webpack';
+
+/**
+ * Transformation to apply for both preview and dev server
+ * @param config
+ * @param _context
+ */
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+function commonTransformation(config: WebpackConfigMutator, _context: WebpackConfigTransformContext) {
+  // Merge config with the webpack.config.js file - adding handlebars support
+  // config.merge([webpackConfig]);
+  config.addAliases({
+    'react-native-svg': require.resolve('react-native-svg-web'),
+    'react-native-web': require.resolve('react-native-web'),
+  });
+  return config;
+}
+
+/**
+ * Transformation for the preview only
+ * @param config
+ * @param context
+ * @returns
+ */
+export const previewConfigTransformer: WebpackConfigTransformer = (
+  config: WebpackConfigMutator,
+  context: WebpackConfigTransformContext
+) => {
+  const newConfig = commonTransformation(config, context);
+  return newConfig;
+};
+
+/**
+ * Transformation for the dev server only
+ * @param config
+ * @param context
+ * @returns
+ */
+export const devServerConfigTransformer: WebpackConfigTransformer = (
+  config: WebpackConfigMutator,
+  context: WebpackConfigTransformContext
+) => {
+  const newConfig = commonTransformation(config, context);
+  return newConfig;
+};
+```
+
+And then in the main file of the extension we created, let's add the import of the Webpack transformers:
+
+```ts
+import { EnvsMain, EnvsAspect } from '@teambit/envs';
+import { ReactNativeAspect, ReactNativeMain } from '@teambit/react-native';
+import { previewConfigTransformer, devServerConfigTransformer } from './webpack/webpack-transformers';
+
+export class CustomReactNativeExtension {
+  constructor(private reactNative: ReactNativeMain) {}
+
+  static dependencies: any = [EnvsAspect, ReactNativeAspect];
+
+  static async provider([envs, reactNative]: [EnvsMain, ReactNativeMain]) {
+    const CustomReactNativeEnv = reactNative.compose([
+      /*
+        Use any of the "reactNative.override..." transformers to
+      */
+      reactNative.useWebpack({
+        previewConfig: [previewConfigTransformer],
+        devServerConfig: [devServerConfigTransformer],
+      }),
+    ]);
+
+    envs.registerEnv(CustomReactNativeEnv);
+
+    return new CustomReactNativeExtension(reactNative);
+  }
+}
+```
+
+This will add the Webpack aliases to the Webpack configurations and solve the issue.  
+One last thing we need to do, is to add the peer dependencies of the parallel library we use to the dependency resolver of the extension in the variants section in `workspace.jsonc` file:
+
+```json
+{
+  "teambit.workspace/variants": {
+    // ...
+    "[some]/[variant]": {
+      "[yourscope]/extensions/custom-react-native": {}
+    },
+    "extensions/custom-react-native": {
+      "teambit.harmony/aspect": {},
+      "teambit.dependencies/dependency-resolver": {
+        "policy": {
+          "dependencies": {
+            "react-native-svg-web": "1.0.9",
+            "react-native-web": "0.16.2",
+            "prop-types": "15.7.2"
+          }
+        }
+      }
+    }
+    // ...
+  }
+}
+```
+
+In this case `react-native-svg-web` have these dependencies in the peer dependencies:
+
+```json
+"peerDependencies": {
+  "prop-types": "*",
+  "react": "*",
+  "react-native-web": ">= 0.10.1"
+},
+```
+
+So we need to add them as the dependencies of the extension so it will work properly.  
+Now every components that will use the `react-native-svg` library will work fine with the compositions, and this solution can be used to every other library that use Native API's.
