replaced theme-context with theme-compositions in docs and composition files

--- a/scopes/compilation/aspect-docs/babel/babel.docs.mdx
+++ b/scopes/compilation/aspect-docs/babel/babel.docs.mdx
@@ -22,13 +22,13 @@ import { Babel } from '@teambit/aspect-docs.babel';
 ### Render with theme and MDX providers
 
 ```jsx
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Babel } from '@teambit/aspect-docs.babel';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Babel />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
