--- a/scopes/dependencies/aspect-docs/yarn/yarn.docs.mdx
+++ b/scopes/dependencies/aspect-docs/yarn/yarn.docs.mdx
@@ -22,13 +22,13 @@ import { Yarn } from '@teambit/aspect-docs.yarn';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Yarn } from '@teambit/aspect-docs.yarn';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Yarn />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
