--- a/scopes/mdx/aspect-docs/mdx/mdx.docs.mdx
+++ b/scopes/mdx/aspect-docs/mdx/mdx.docs.mdx
@@ -22,13 +22,13 @@ import { Mdx } from '@teambit/aspect-docs.mdx';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Mdx } from '@teambit/aspect-docs.mdx';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Mdx />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
