--- a/scopes/pkg/aspect-docs/pkg/pkg.docs.mdx
+++ b/scopes/pkg/aspect-docs/pkg/pkg.docs.mdx
@@ -22,13 +22,13 @@ import { Pkg } from '@teambit/aspect-docs.pkg';
 ### Render with theme and Pkg providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { PkgLayout } from '@teambit/ui.Pkg-layout';
 import { Pkg } from '@teambit/aspect-docs.pkg';
 
-<ThemeContext>
+<ThemeCompositions>
   <PkgLayout>
     <Pkg />
   </PkgLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
