--- a/scopes/react/aspect-docs/react-native/react-native.docs.mdx
+++ b/scopes/react/aspect-docs/react-native/react-native.docs.mdx
@@ -22,13 +22,13 @@ import { ReactNative } from '@teambit/react.aspect-docs.react-native';
 ### Render with theme and ReactNative providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXNativeLayout } from '@teambit/ui.mdx-layout';
 import { ReactNative } from '@teambit/react.aspect-docs.react-native';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXNativeLayout>
     <ReactNative />
   </MDXNativeLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
