--- a/scopes/typescript/aspect-docs/typescript/typescript.docs.mdx
+++ b/scopes/typescript/aspect-docs/typescript/typescript.docs.mdx
@@ -22,13 +22,13 @@ import { Typescript } from '@teambit/aspect-docs.typescript';
 ### Render with theme and Typescript providers
 
 ```jsx
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Typescript } from '@teambit/aspect-docs.typescript';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Typescript />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
