--- a/scopes/workspace/aspect-docs/variants/variants.docs.mdx
+++ b/scopes/workspace/aspect-docs/variants/variants.docs.mdx
@@ -22,13 +22,13 @@ import { Variants } from '@teambit/aspect-docs.variants';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Variants } from '@teambit/aspect-docs.variants';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Variants />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
