--- a/scopes/compilation/aspect-docs/compiler/compiler.docs.mdx
+++ b/scopes/compilation/aspect-docs/compiler/compiler.docs.mdx
@@ -22,13 +22,13 @@ import { Compiler } from '@teambit/aspect-docs.compiler';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Compiler } from '@teambit/aspect-docs.compiler';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Compiler />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
