--- a/scopes/compilation/aspect-docs/multi-compiler/multi-compiler.docs.mdx
+++ b/scopes/compilation/aspect-docs/multi-compiler/multi-compiler.docs.mdx
@@ -22,13 +22,13 @@ import { MultiCompiler } from '@teambit/aspect-docs.multi-compiler';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { MultiCompiler } from '@teambit/aspect-docs.multi-compiler';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <MultiCompiler />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
