--- a/scopes/component/aspect-docs/component/component.docs.mdx
+++ b/scopes/component/aspect-docs/component/component.docs.mdx
@@ -22,13 +22,13 @@ import { Component } from '@teambit/aspect-docs.component';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Component } from '@teambit/aspect-docs.component';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Component />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
