--- a/scopes/compositions/aspect-docs/compositions/compositions.docs.mdx
+++ b/scopes/compositions/aspect-docs/compositions/compositions.docs.mdx
@@ -22,13 +22,13 @@ import { Compositions } from '@teambit/aspect-docs.compositions';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Compositions } from '@teambit/aspect-docs.compositions';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Compositions />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
