--- a/scopes/dependencies/aspect-docs/dependency-resolver/dependency-resolver.docs.mdx
+++ b/scopes/dependencies/aspect-docs/dependency-resolver/dependency-resolver.docs.mdx
@@ -22,13 +22,13 @@ import { DependencyResolver } from '@teambit/aspect-docs.dependency-resolver';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { DependencyResolver } from '@teambit/aspect-docs.dependency-resolver';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <DependencyResolver />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
