--- a/scopes/generator/aspect-docs/generator/generator.docs.mdx
+++ b/scopes/generator/aspect-docs/generator/generator.docs.mdx
@@ -22,13 +22,13 @@ import { Generator } from '@teambit/aspect-docs.generator';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Generator } from '@teambit/aspect-docs.generator';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Generator />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
