--- a/scopes/harmony/aspect-docs/logger/logger.docs.mdx
+++ b/scopes/harmony/aspect-docs/logger/logger.docs.mdx
@@ -22,13 +22,13 @@ import { Logger } from '@teambit/aspect-docs.logger';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Logger } from '@teambit/aspect-docs.logger';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Logger />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
