--- a/scopes/harmony/aspect-docs/node/node.docs.mdx
+++ b/scopes/harmony/aspect-docs/node/node.docs.mdx
@@ -22,13 +22,13 @@ import { Node } from '@teambit/aspect-docs.node';
 ### Render with theme and MDX providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Node } from '@teambit/aspect-docs.node';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Node />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
