--- a/scopes/preview/aspect-docs/preview/preview.docs.mdx
+++ b/scopes/preview/aspect-docs/preview/preview.docs.mdx
@@ -22,13 +22,13 @@ import { Preview } from '@teambit/aspect-docs.preview';
 ### Render with theme and Preview providers
 
 ```jsx
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { Preview } from '@teambit/aspect-docs.preview';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <Preview />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
