--- a/scopes/react/aspect-docs/react/react.docs.mdx
+++ b/scopes/react/aspect-docs/react/react.docs.mdx
@@ -22,13 +22,13 @@ import { ReactAspect } from '@teambit/react.aspect-docs.react';
 ### Render with theme and React providers
 
 ```js
-import { ThemeContext } from '@teambit/documenter.theme.theme-context';
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
 import { ReactAspect } from '@teambit/react.aspect-docs.react';
 
-<ThemeContext>
+<ThemeCompositions>
   <MDXLayout>
     <ReactAspect />
   </MDXLayout>
-</ThemeContext>;
+</ThemeCompositions>;
 ```
