--- a/scopes/design/ui/status-message-card/status-message-card.docs.mdx
+++ b/scopes/design/ui/status-message-card/status-message-card.docs.mdx
@@ -2,6 +2,7 @@
 labels: ['react', 'typescript', 'message-card', 'status']
 ---
 
+import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { StatusMessageCard } from './status-message-card';
 
 StatusMessageCard examples:
@@ -9,15 +10,19 @@ StatusMessageCard examples:
 A passing status card
 
 ```js live
-<StatusMessageCard status="SUCCESS" title="sueecess card">
-  this might take a minute
-</StatusMessageCard>
+<ThemeCompositions>
+  <StatusMessageCard status="SUCCESS" title="sueecess card">
+    this might take a minute
+  </StatusMessageCard>
+</ThemeCompositions>
 ```
 
 A failing status card
 
 ```js live
-<StatusMessageCard status="FAILURE" title="failure card">
-  this might take a minute
-</StatusMessageCard>
+<ThemeCompositions>
+  <StatusMessageCard status="FAILURE" title="failure card">
+    this might take a minute
+  </StatusMessageCard>
+</ThemeCompositions>
 ```
