--- a/scopes/ui-foundation/use-box/menu/menu.docs.mdx
+++ b/scopes/ui-foundation/use-box/menu/menu.docs.mdx
@@ -8,10 +8,9 @@ import { Menu } from './menu';
 
 ```js live
 <Menu
-  packageLink="@teambit/design.ui.input.radio"
-  bitLink="teambit.design/ui/input/radio"
+  packageName="@teambit/design.ui.input.radio"
+  componentId="teambit.design/ui/input/radio"
   registryName="@teambit"
   componentName="radio"
-  key="bla"
 />
 ```
