fix node aspect docs

--- a/scopes/harmony/aspect-docs/node/node.docs.mdx
+++ b/scopes/harmony/aspect-docs/node/node.docs.mdx
@@ -14,7 +14,7 @@ Docs for Node aspect
 Use your component in any mdx file:
 
 ```js
-import { Node } from '@teambit/aspect-docs.node';
+import { Node } from '@teambit/harmony.aspect-docs.node';
 
 <Node />;
 ```
@@ -24,7 +24,7 @@ import { Node } from '@teambit/aspect-docs.node';
 ```js
 import { ThemeCompositions } from '@teambit/documenter.theme.theme-compositions';
 import { MDXLayout } from '@teambit/ui.mdx-layout';
-import { Node } from '@teambit/aspect-docs.node';
+import { Node } from '@teambit/harmony.aspect-docs.node';
 
 <ThemeCompositions>
   <MDXLayout>
