--- a/scopes/react/aspect-docs/react/react.mdx
+++ b/scopes/react/aspect-docs/react/react.mdx
@@ -213,8 +213,8 @@ import { ReactWithProvidersAspect } from './react-with-providers.aspect'
 import { Center } from './composition-providers/center'
 
 export class ReactWithProvidersPreview {
-  static runtime: any = PreviewRuntime
-  static dependencies: any = [ReactAspect]
+  static runtime = PreviewRuntime
+  static dependencies = [ReactAspect]
 
   static async provider([react]: [ReactPreview]) {
     react.registerProvider([Center])
