--- a/scopes/html/html/html.docs.mdx
+++ b/scopes/html/html/html.docs.mdx
@@ -17,7 +17,8 @@ To use this environment for your components, add it to any of the `variants` in 
 ```json title="workspace.jsonc"
 {
   "teambit.workspace/variants": {
-    "some/path": { // e.g. apply the env to all components under the some/path directory
+    "some/path": {
+      // e.g. apply the env to all components under the some/path directory
       "teambit.html/html": {}
     }
   }
@@ -26,10 +27,10 @@ To use this environment for your components, add it to any of the `variants` in 
 
 ### No-Framework components
 
-For shareable, framework-less components __documentation is absolutely key__.
+For shareable, framework-less components **documentation is absolutely key**.
 
 Not using a framework brings the benefit of smaller bundle sizes, total freedom to manipulate the dom how you wish and most importantly the ability to use
-in any consuming app, no matter the framework it is using.   
+in any consuming app, no matter the framework it is using.
 
 However this freedom comes at the cost of there being no sort of standardisation in terms of the output of a framework-less component, and it's not immediately apparent
 to consumers of your components what output to expect from the component and how to use it in their application.
@@ -45,7 +46,7 @@ Bit provides two forms of documentation, which we recommend to use in tandem - a
 in a full context to illustrate your component working in various different scenarios. This env supports creating compositions in a number of different formats.
 
 These formats stem from the fact that Html + JS + CSS components can be implemented in a variety of ways, and their consumption is directly tied to their implementation.  
-You can also think of compositions as examples for how to consume your component, and the different composition formats can be used in conjunction 
+You can also think of compositions as examples for how to consume your component, and the different composition formats can be used in conjunction
 with each other, as separate examples of various ways of consuming your component.
 
 Supported composition formats in this environment:
@@ -68,11 +69,12 @@ Another is to pass a string of HTML, which will be converted into actual HTML an
 The third method is to pass a function, which takes in a root element as argument, and mutates the dom based on that root element. Use this if your
 component creates its own HTML and relies on having access to the dom element inside which its HTML output will live.
 
-#### Example 
+#### Example
 
 Sample component:
+
 ```js
-export function createColouredDiv(compositionType: string, colour: string){
+export function createColouredDiv(compositionType: string, colour: string) {
   const newDiv = document.createElement('div');
   newDiv.style.color = colour;
   newDiv.textContent = `This is a${compositionType} composition with ${colour} text`;
@@ -81,28 +83,26 @@ export function createColouredDiv(compositionType: string, colour: string){
 ```
 
 Compositions file demonstrating the 3 types of composition:
+
 ```js
 import { createColouredDiv } from './test-component';
 
-
-export const HtmlStringComposition = createColouredDiv('n HTML string','orange').outerHTML;
+export const HtmlStringComposition = createColouredDiv('n HTML string', 'orange').outerHTML;
 
 export const FunctionComposition = (root) => {
   const newDiv = createColouredDiv(' function', 'darkgreen');
   root.appendChild(newDiv);
-}
+};
 
 export const ElementComposition = createColouredDiv('n element', 'darkBlue');
 ```
-
 
 ### Additional tools
 
 In order to support other methods of bringing in DOM elements to a document, we've also supplied a couple of helper functions.
 
 1. `fetchHtmlFromUrl`
-This async function takes in a url as parameter and outputs your HTML string. You can then either convert that to a DOM element (using the next helper function)
-or just render that string as a composition via the HTML string composition method above.
-1.  `createElementFromString`
-This method will take in a string of HTML and output a full DOM fragment which can be added to the DOM directly. 
-
+   This async function takes in a url as parameter and outputs your HTML string. You can then either convert that to a DOM element (using the next helper function)
+   or just render that string as a composition via the HTML string composition method above.
+1. `createElementFromString`
+   This method will take in a string of HTML and output a full DOM fragment which can be added to the DOM directly.
