move templates/generator to templates/component-generator

--- a/scopes/generator/aspect-docs/generator/generator.mdx
+++ b/scopes/generator/aspect-docs/generator/generator.mdx
@@ -76,7 +76,7 @@ Aspect ID that registered this template, required only if there are two template
 create a custom template generator using the generator command and add a name.
 
 ```bash
-bit create generator <my-components>
+bit create component-generator <my-components>
 ```
 
 ### Configuring your Generator
