generate docs for workspace generator

--- a/scopes/generator/generator/generator.docs.mdx
+++ b/scopes/generator/generator/generator.docs.mdx
@@ -1,6 +1,6 @@
 ---
 description: Generator for generating component templates
-labels: ['genearor', 'templates']
+labels: ['generator', 'templates']
 ---
 
 import { Generator } from '@teambit/generator.aspect-docs.generator';
