remove header from .mdx file

--- a/scopes/html/aspect-docs/html/html.docs.mdx
+++ b/scopes/html/aspect-docs/html/html.docs.mdx
@@ -1,6 +1,6 @@
 ---
 description: 'Docs for Html aspect'
-labels: ['docs', 'aspect', 'extensions']
+labels: ['docs', 'aspect', 'extensions', 'html', 'environment', 'framework-less', 'vanillajs', 'vanilla js']
 ---
 
 import { Html } from './index';
